syntax = "proto2";
package com.netty.protoandnetty;

option optimize_for = SPEED;
option java_package = "com.netty.protoandnetty";
option java_outer_classname = "SkDataPb";

message MyMessage{
   enum DataType{
     StudentType=1;
     DogType=2;
     CatType=3;
   }
   required DataType type = 1;

   oneof dataBody{
       Student student = 2;
       Dog dog = 3;
       Cat cat = 4;
   }
}

message Student{
 optional string name = 1;
 optional int32 age = 2;
 optional string address = 3;
}

message Dog{
 optional string name = 1;
 optional string color = 2;
}

message Cat{
 optional string home = 1;
 optional string sex = 2;
}

